# ros_workspace

devel/: .catkin  local_setup.sh  setup.sh
devel/include/beginner_tutorials/: Sum.h  SumRequest.h  SumResponse.h
devel/include/ros_package4/: Num.h  SumRequest.h  SumResponse.h
devel/lib/beginner_tutorials/: client.py  ros1.py
devel/lib/pkgconfig/: beginner_tutorials.pc  ros_package12.pc  ros_package3.pc  ros_package4.pc  ros_package5.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc
devel/lib/ros_package12/: rosPose.py  rosTwist.py
devel/lib/ros_package3/: moving.py
devel/lib/ros_package4/: client.py  server.py
devel/lib/rosserial_arduino/: make_libraries.py  serial_node.py
devel/lib/rosserial_client/: make_libraries  make_library.py
devel/lib/rosserial_embeddedlinux/: make_libraries.py
devel/lib/rosserial_mbed/: make_libraries.py
devel/lib/rosserial_python/: message_info_service.py  serial_node.py
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/rosserial_windows/: make_libraries.py
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/ros_package12/cmake/: ros_package12Config.cmake
devel/share/ros_package3/cmake/: ros_package3-msg-paths.cmake  ros_package3Config.cmake
devel/share/ros_package4/cmake/: ros_package4-msg-paths.cmake  ros_package4Config.cmake
devel/share/ros_package5/cmake/: ros_package5Config.cmake
devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
devel/share/rosserial_chibios/: make_libraries.py
devel/share/rosserial_chibios/cmake/: rosserial_chibiosConfig.cmake
devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
devel/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
devel/share/rosserial_mbed/cmake/: rosserial_mbed-msg-extras.cmake  rosserial_mbed-msg-paths.cmake  rosserial_mbedConfig.cmake
devel/share/rosserial_msgs/cmake/: rosserial_msgs-msg-paths.cmake  rosserial_msgsConfig.cmake
devel/share/rosserial_python/cmake/: rosserial_pythonConfig.cmake
devel/share/rosserial_server/cmake/: rosserial_serverConfig.cmake
devel/share/rosserial_test/cmake/: rosserial_testConfig.cmake
devel/share/rosserial_tivac/cmake/: rosserial_tivac-extras.cmake  rosserial_tivacConfig.cmake
devel/share/rosserial_vex_cortex/: make_libraries.py
devel/share/rosserial_vex_cortex/cmake/: rosserial_vex_cortexConfig.cmake
devel/share/rosserial_vex_v5/: make_libraries.py
devel/share/rosserial_vex_v5/cmake/: rosserial_vex_v5Config.cmake
devel/share/rosserial_windows/cmake/: rosserial_windowsConfig.cmake
devel/share/rosserial_xbee/cmake/: rosserial_xbeeConfig.cmake
install/include/ros_package4/: Sum.h
install/lib/pkgconfig/: ros_package12.pc  ros_package3.pc  ros_package4.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_test.pc  rosserial_windows.pc
install/lib/ros_package12/: rosPose.py  rosTwist.py
install/lib/ros_package4/: server.py
install/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
install/share/ros_package12/: package.xml  start.launch
install/share/ros_package3/: urdf.rviz
src/ros_package12/: CMakeLists.txt
src/ros_package12/scripts/: rosTwist.py
src/ros_package3/: CMakeLists.txt  package.xml
src/ros_package3/launch/: start.launch
src/ros_package3/src/: moving.py
src/ros_package3/urdf/: my_robot.urdf
src/ros_package4/: CMakeLists.txt
src/ros_package4/launch/: start.launch
src/ros_package4/scripts/: client.py
src/ros_package5/: CMakeLists.txt  package.xml
src/ros_package5/launch/: start.launch
src/ros_package5/other/: roslab5_sketch.ino
(+50 files in other folders)
